--- a/IllusionDiffusion_colab.ipynb
+++ b/IllusionDiffusion_colab.ipynb
@@ -19,7 +19,7 @@
       "source": [
         "%cd /content\n",
         "!git clone -b dev https://github.com/camenduru/IllusionDiffusion-hf\n",
-        "%cd /content/Text2Tex\n",
+        "%cd /content/IllusionDiffusion-hf\n",
         "!python app.py"
       ]
     }
