--- a/IllusionDiffusion_colab.ipynb
+++ b/IllusionDiffusion_colab.ipynb
@@ -20,6 +20,7 @@
         "%cd /content\n",
         "!git clone -b dev https://github.com/camenduru/IllusionDiffusion-hf\n",
         "%cd /content/IllusionDiffusion-hf\n",
+        "!pip install -q -r requirements.txt\n",
         "!python app.py"
       ]
     }
