--- a/IllusionDiffusion_colab.ipynb
+++ b/IllusionDiffusion_colab.ipynb
@@ -21,6 +21,14 @@
         "!git clone -b dev https://github.com/camenduru/IllusionDiffusion-hf\n",
         "%cd /content/IllusionDiffusion-hf\n",
         "!pip install -q -r requirements.txt\n",
+        "\n",
+        "import torch\n",
+        "from diffusers import StableDiffusionPipeline\n",
+        "!apt -y install -qq aria2\n",
+        "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M 'https://civitai.com/api/download/models/138176?type=Model&format=SafeTensor&size=pruned&fp=fp16' -d /content/models -o cyberrealistic_v33.safetensors\n",
+        "pipeline = StableDiffusionPipeline.from_single_file('/content/models/cyberrealistic_v33.safetensors', torch_dtype=torch.float16, safety_checker=None)\n",
+        "pipeline.save_pretrained('/content/models/torch/cyberrealistic', safe_serialization=False)\n",
+        "\n",
         "!python app.py"
       ]
     }
