--- a/IllusionDiffusion_colab.ipynb
+++ b/IllusionDiffusion_colab.ipynb
@@ -19,16 +19,16 @@
       "source": [
         "%cd /content\n",
         "!git clone -b dev https://github.com/camenduru/IllusionDiffusion-hf\n",
-        "sys.path.append('/content/FreeU_Diffusers')\n",
         "!git clone -b diffusers-v0.21.2 https://github.com/camenduru/FreeU_Diffusers\n",
         "%cd /content/IllusionDiffusion-hf\n",
         "!pip install -q -r requirements.txt\n",
         "\n",
-        "import torch\n",
+        "import torch, sys\n",
         "from diffusers import StableDiffusionPipeline\n",
         "!apt -y install -qq aria2\n",
         "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M 'https://civitai.com/api/download/models/138176?type=Model&format=SafeTensor&size=pruned&fp=fp16' -d /content/models -o cyberrealistic_v33.safetensors\n",
         "\n",
+        "sys.path.append('/content/FreeU_Diffusers')\n",
         "from free_lunch_utils import register_free_upblock2d, register_free_crossattn_upblock2d\n",
         "register_free_upblock2d(pipe, b1=1.2, b2=1.4, s1=0.9, s2=0.2)\n",
         "register_free_crossattn_upblock2d(pipe, b1=1.2, b2=1.4, s1=0.9, s2=0.2)\n",
