--- a/IllusionDiffusion_colab.ipynb
+++ b/IllusionDiffusion_colab.ipynb
@@ -33,8 +33,8 @@
         "\n",
         "sys.path.append('/content/FreeU_Diffusers')\n",
         "from free_lunch_utils import register_free_upblock2d, register_free_crossattn_upblock2d\n",
-        "register_free_upblock2d(pipe, b1=1.2, b2=1.4, s1=0.9, s2=0.2)\n",
-        "register_free_crossattn_upblock2d(pipe, b1=1.2, b2=1.4, s1=0.9, s2=0.2)\n",
+        "register_free_upblock2d(pipeline, b1=1.2, b2=1.4, s1=0.9, s2=0.2)\n",
+        "register_free_crossattn_upblock2d(pipeline, b1=1.2, b2=1.4, s1=0.9, s2=0.2)\n",
         "\n",
         "!python app.py"
       ]
